--- a/src/views/components/EmailList/EmailList.css
+++ b/src/views/components/EmailList/EmailList.css
@@ -7,7 +7,8 @@
     position: sticky;
     top: 0;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    justify-content: start;
     border-bottom: 1px solid whitesmoke;
     background-color: white;
     z-index: 999;
@@ -21,8 +22,21 @@
     border-bottom: 1px solid whitesmoke;
     background-color: white;
     z-index: 999;
+    margin-left: 10px;
 }
 
+
+.emailList-settingsRight {
+    /* position: sticky; */
+    /* top: 0; */
+    display: flex;
+    justify-content: space-between;
+    /* justify-content: start; */
+    border-bottom: 1px solid whitesmoke;
+    background-color: white;
+    z-index: 999;
+    padding-right: 20px;
+}
 
 /* Hide scrollbar for Chrome, Safari, and Opera */
 .emalList::-webkit-scrollbar{
@@ -50,7 +64,6 @@
 
     .emailList-settingsLeft{
         margin-left: 10px;
-        justify-content: space-between;
     }
 
     .emailList-settingsRight{
